--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
     "react-native-deprecated-custom-components": "^0.1.1",
+    "react-native-swipeout": "^2.2.2",
     "react-native-vector-icons": "^4.4.0",
-    "react-navigation": "^1.0.0-beta.13"
+    "react-navigation": "^1.0.0-beta.13",
+    "redux": "^3.7.2"
   }
 }
